--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "src/**/!(*spec).+(js|d.ts|js.map)"
   ],
   "devDependencies": {
-    "@angular/common": "^2.0.0-rc.6",
-    "@angular/compiler": "^2.0.0-rc.6",
-    "@angular/core": "^2.0.0-rc.6",
-    "@angular/platform-browser": "^2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.6",
+    "@angular/common": "2.0.0-rc.6",
+    "@angular/compiler": "2.0.0-rc.6",
+    "@angular/core": "2.0.0-rc.6",
+    "@angular/platform-browser": "2.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
     "@angular/forms": "2.0.0-rc.6",
     "core-js": "^2.4.0",
     "del": "^2.2.1",
@@ -37,14 +37,14 @@
     "karma-mocha-reporter": "^2.1.0",
     "karma-phantomjs-launcher": "^1.0.1",
     "karma-sourcemap-loader": "^0.3.7",
-    "ng2-bootstrap": "1.1.1",
+    "ng2-bootstrap": "1.1.2",
     "phantomjs": "^2.1.7",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.11",
+    "rxjs": "5.0.0-beta.12",
     "systemjs": "^0.19.27",
     "tslint": "^3.14.0",
     "typescript": "^1.8.10",
     "typings": "^1.0.4",
-    "zone.js": "^0.6.12"
+    "zone.js": "^0.6.21"
   }
 }
