--- a/demo/package.json
+++ b/demo/package.json
@@ -14,6 +14,7 @@
     "@angular/platform-browser": "2.0.0-rc.6",
     "@angular/platform-browser-dynamic": "2.0.0-rc.6",
     "@angular/forms": "2.0.0-rc.6",
+    "@angular/router": "3.0.0-rc.2",
     "ng2-bootstrap": "1.1.2",
     "font-awesome": "^4.6.3"
   },
