--- a/demo/package.json
+++ b/demo/package.json
@@ -8,14 +8,16 @@
     "start": "webpack-dev-server --config webpack.config.js --hot --inline --progress --port 3000 --watch-poll --content-base src"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.6",
-    "@angular/compiler": "2.0.0-rc.6",
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/platform-browser": "2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
-    "@angular/forms": "2.0.0-rc.6",
-    "@angular/router": "3.0.0-rc.2",
-    "ng2-bootstrap": "1.1.2",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/router": "3.0.0",
+    "@types/jasmine": "2.2.33",
+    "@types/node": "6.0.38",
+    "@types/webpack": "1.12.34",
     "font-awesome": "^4.6.3"
   },
   "devDependencies": {
