--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": "http://ri-source.hci.utah.edu/hcidevs/hci-ng2-grid.git",
   "scripts": {
-    "build": "gulp build && gulp test",
+    "build": "gulp build",
     "prepublish": "npm run build"
   },
   "publishConfig": {
@@ -16,12 +16,12 @@
     "src/**/!(*spec).+(js|d.ts|js.map)"
   ],
   "devDependencies": {
-    "@angular/common": "2.0.0-rc.6",
-    "@angular/compiler": "2.0.0-rc.6",
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/platform-browser": "2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
-    "@angular/forms": "2.0.0-rc.6",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/forms": "2.0.0",
     "core-js": "^2.4.0",
     "del": "^2.2.1",
     "es6-shim": "0.33.3",
@@ -37,7 +37,6 @@
     "karma-mocha-reporter": "^2.1.0",
     "karma-phantomjs-launcher": "^1.0.1",
     "karma-sourcemap-loader": "^0.3.7",
-    "ng2-bootstrap": "1.1.2",
     "phantomjs": "^2.1.7",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
