--- a/demo/package.json
+++ b/demo/package.json
@@ -18,6 +18,7 @@
     "@types/jasmine": "2.2.33",
     "@types/node": "6.0.38",
     "@types/webpack": "1.12.34",
+    "ng2-bootstrap": "1.1.3",
     "font-awesome": "^4.6.3"
   },
   "devDependencies": {
