--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "karma-phantomjs-launcher": "^1.0.1",
     "karma-sourcemap-loader": "^0.3.7",
     "phantomjs": "^2.1.7",
+    "ng2-bootstrap": "1.1.3",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "^0.19.27",
