--- a/demo/package.json
+++ b/demo/package.json
@@ -8,17 +8,17 @@
     "start": "webpack-dev-server --config webpack.config.js --hot --inline --progress --port 3000 --watch-poll --content-base src"
   },
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/forms": "2.0.0",
+    "@angular/common": "^2.0.0",
+    "@angular/compiler": "^2.0.0",
+    "@angular/core": "^2.0.0",
+    "@angular/platform-browser": "^2.0.0",
+    "@angular/platform-browser-dynamic": "^2.0.0",
+    "@angular/forms": "^2.0.0",
     "@angular/router": "3.0.0",
     "@types/jasmine": "2.2.33",
     "@types/node": "6.0.38",
     "@types/webpack": "1.12.34",
-    "ng2-bootstrap": "1.1.3",
+    "ng2-bootstrap": "1.1.5",
     "font-awesome": "^4.6.3"
   },
   "devDependencies": {
@@ -35,8 +35,8 @@
     "ts-loader": "^0.8.2",
     "tslint": "^3.14.0",
     "tslint-loader": "^2.1.5",
-    "typescript": "^1.8.10",
-    "typings": "^1.0.4",
+    "typescript": "^2.0.2",
+    "typings": "^1.3.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
