--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "src/**/!(*spec).+(js|d.ts|js.map)"
   ],
   "devDependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/forms": "2.0.0",
+    "@angular/common": "^2.0.0",
+    "@angular/compiler": "^2.0.0",
+    "@angular/core": "^2.0.0",
+    "@angular/platform-browser": "^2.0.0",
+    "@angular/platform-browser-dynamic": "^2.0.0",
+    "@angular/forms": "^2.0.0",
     "core-js": "^2.4.0",
     "del": "^2.2.1",
     "es6-shim": "0.33.3",
+    "fs": "^0.0.2",
     "gulp": "^3.9.1",
     "gulp-tsc": "^1.2.0",
     "gulp-tslint": "^6.0.2",
@@ -37,14 +38,15 @@
     "karma-mocha-reporter": "^2.1.0",
     "karma-phantomjs-launcher": "^1.0.1",
     "karma-sourcemap-loader": "^0.3.7",
+    "minimist": "^1.2.0",
     "phantomjs": "^2.1.7",
-    "ng2-bootstrap": "1.1.3",
+    "ng2-bootstrap": "1.1.5",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "^0.19.27",
     "tslint": "^3.14.0",
-    "typescript": "^1.8.10",
-    "typings": "^1.0.4",
+    "typescript": "^2.0.2",
+    "typings": "^1.3.2",
     "zone.js": "^0.6.21"
   }
 }
