--- a/demo/package.json
+++ b/demo/package.json
@@ -19,6 +19,7 @@
     "@types/node": "6.0.38",
     "@types/webpack": "1.12.34",
     "ng2-bootstrap": "1.1.5",
+    "ng2-dragula": "1.2.0",
     "font-awesome": "^4.6.3"
   },
   "devDependencies": {
