--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "minimist": "^1.2.0",
     "phantomjs": "^2.1.7",
     "ng2-bootstrap": "1.1.5",
+    "ng2-dragula": "1.2.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "^0.19.27",
