--- a/demo/package.json
+++ b/demo/package.json
@@ -8,18 +8,18 @@
     "start": "webpack-dev-server --config webpack.config.js --hot --inline --progress --port 3000 --watch-poll --content-base src"
   },
   "dependencies": {
-    "@angular/common": "^2.0.0",
-    "@angular/compiler": "^2.0.0",
-    "@angular/core": "^2.0.0",
-    "@angular/platform-browser": "^2.0.0",
-    "@angular/platform-browser-dynamic": "^2.0.0",
-    "@angular/forms": "^2.0.0",
-    "@angular/router": "3.0.0",
+    "@angular/common": "^2.0.1",
+    "@angular/compiler": "^2.0.1",
+    "@angular/core": "^2.0.1",
+    "@angular/platform-browser": "^2.0.1",
+    "@angular/platform-browser-dynamic": "^2.0.1",
+    "@angular/forms": "^2.0.1",
+    "@angular/router": "^3.0.1",
     "@types/jasmine": "2.2.33",
     "@types/node": "6.0.38",
     "@types/webpack": "1.12.34",
-    "ng2-bootstrap": "1.1.5",
-    "ng2-dragula": "1.2.0",
+    "ng2-bootstrap": "^1.1.6",
+    "ng2-dragula": "^1.2.1",
     "font-awesome": "^4.6.3"
   },
   "devDependencies": {
@@ -31,7 +31,7 @@
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
     "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.11",
+    "rxjs": "5.0.0-beta.12",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
     "tslint": "^3.14.0",
