--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser": "^2.1.0",
     "@angular/platform-browser-dynamic": "^2.1.0",
     "@angular/forms": "^2.1.0",
+    "@types/core-js": "^0.9.34",
+    "@types/jasmine": "^2.5.38",
+    "@types/node": "^6.0.48",
     "core-js": "^2.4.0",
     "del": "^2.2.1",
     "es6-shim": "0.33.3",
