--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "ng2-bootstrap": "^1.1.16",
     "ng2-dragula": "^1.2.1",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.0.1",
     "systemjs": "^0.19.27",
     "tslint": "^3.14.0",
     "typescript": "^2.0.2",
