--- a/demo/package.json
+++ b/demo/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "hci-ng2-input-demo",
-  "description": "A demo application for hci-ng2-input component development",
+  "name": "hci-ng-grid-demo",
+  "description": "A demo application for hci-ng-grid component development",
   "private": true,
   "scripts": {
-    "typings": "typings",
-    "postinstall": "typings install && cd ../ && gulp push --depCheck",
+    "postinstall": "cd ../ && gulp push --depCheck",
     "start": "webpack-dev-server --config webpack.config.js --hot --inline --progress --port 3000 --watch-poll --content-base src"
   },
   "dependencies": {
-    "@angular/common": "^2.1.0",
-    "@angular/compiler": "^2.1.0",
-    "@angular/core": "^2.1.0",
-    "@angular/platform-browser": "^2.1.0",
-    "@angular/platform-browser-dynamic": "^2.1.0",
-    "@angular/forms": "^2.1.0",
+    "@angular/common": "^2.2.0",
+    "@angular/compiler": "^2.2.0",
+    "@angular/core": "^2.2.0",
+    "@angular/platform-browser": "^2.2.0",
+    "@angular/platform-browser-dynamic": "^2.2.0",
+    "@angular/forms": "^2.2.0",
     "@angular/router": "^3.1.0",
     "ng2-bootstrap": "^1.1.16",
     "ng2-dragula": "^1.2.1",
@@ -30,8 +29,8 @@
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
-    "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.1",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "^5.0.1",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
     "tslint": "^3.14.0",
@@ -41,9 +40,9 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
-    "zone.js": "^0.6.21"
+    "zone.js": "^0.7.2"
   },
   "optionalDependencies": {
-    "hci-ng2-grid": "^1.0.0"
+    "hci-ng-grid": "^1.0.0"
   }
 }
