--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "hci-ng2-grid",
-  "version": "1.0.0",
+  "name": "hci-ng-grid",
+  "version": "1.0.0-alpha.0",
   "description": "Input component library",
   "main": "index.js",
-  "repository": "http://ri-source.hci.utah.edu/hcidevs/hci-ng2-grid.git",
+  "repository": "http://ri-source.hci.utah.edu/hcidevs/hci-ng-grid.git",
   "scripts": {
     "build": "gulp build",
     "prepublish": "npm run build"
@@ -16,23 +16,23 @@
     "src/**/!(*spec).+(js|d.ts|js.map)"
   ],
   "devDependencies": {
-    "@angular/common": "^2.1.0",
-    "@angular/compiler": "^2.1.0",
-    "@angular/core": "^2.1.0",
-    "@angular/platform-browser": "^2.1.0",
-    "@angular/platform-browser-dynamic": "^2.1.0",
-    "@angular/forms": "^2.1.0",
+    "@angular/common": "^2.2.0",
+    "@angular/compiler": "^2.2.0",
+    "@angular/core": "^2.2.0",
+    "@angular/platform-browser": "^2.2.0",
+    "@angular/platform-browser-dynamic": "^2.2.0",
+    "@angular/forms": "^2.2.0",
     "@types/core-js": "^0.9.34",
     "@types/jasmine": "^2.5.38",
     "@types/node": "^6.0.48",
-    "core-js": "^2.4.0",
+    "core-js": "^2.4.1",
     "del": "^2.2.1",
-    "es6-shim": "0.33.3",
+    "es6-promise": "^3.0.2",
+    "es6-shim": "^0.33.3",
     "fs": "^0.0.2",
     "gulp": "^3.9.1",
-    "gulp-tsc": "^1.2.0",
+    "gulp-tsc": "^1.2.5",
     "gulp-tslint": "^6.0.2",
-    "gulp-typings": "^2.0.3",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
@@ -46,11 +46,11 @@
     "ng2-bootstrap": "^1.1.16",
     "ng2-dragula": "^1.2.1",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.1",
+    "rxjs": "^5.0.1",
     "systemjs": "^0.19.27",
     "tslint": "^3.14.0",
     "typescript": "^2.0.2",
     "typings": "^1.3.2",
-    "zone.js": "^0.6.21"
+    "zone.js": "^0.7.2"
   }
 }
