--- a/demo/package.json
+++ b/demo/package.json
@@ -7,19 +7,21 @@
     "start": "webpack-dev-server --config webpack.config.js --hot --inline --progress --port 3000 --watch-poll --content-base src"
   },
   "dependencies": {
-    "@angular/common": "^2.2.0",
-    "@angular/compiler": "^2.2.0",
-    "@angular/core": "^2.2.0",
-    "@angular/platform-browser": "^2.2.0",
-    "@angular/platform-browser-dynamic": "^2.2.0",
-    "@angular/forms": "^2.2.0",
-    "@angular/router": "^3.1.0",
-    "ng2-bootstrap": "^1.1.16",
-    "font-awesome": "^4.6.3"
+    "@angular/common": "^2.4.4",
+    "@angular/compiler": "^2.4.4",
+    "@angular/core": "^2.4.4",
+    "@angular/platform-browser": "^2.4.4",
+    "@angular/platform-browser-dynamic": "^2.4.4",
+    "@angular/forms": "^2.4.4",
+    "@angular/router": "^3.4.4",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.20",
+    "bootstrap": "4.0.0-alpha.6",
+    "font-awesome": "^4.6.3",
+    "moment": "2.15.1"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.34",
-    "@types/jasmine": "^2.5.38",
+    "@types/core-js": "^0.9.35",
+    "@types/jasmine": "^2.5.42",
     "@types/node": "^6.0.48",
     "copy-webpack-plugin": "^3.0.1",
     "core-js": "^2.4.1",
@@ -29,19 +31,19 @@
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.0.1",
+    "rxjs": "^5.0.3",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
     "tslint": "^3.14.0",
     "tslint-loader": "^2.1.5",
-    "typescript": "^2.0.2",
-    "typings": "^1.3.2",
+    "typescript": "2.1.6",
+    "typings": "2.1.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.7.6"
   },
   "optionalDependencies": {
-    "hci-ng-grid": "1.0.0-alpha.3"
+    "hci-ng-grid": "1.0.0-alpha.4"
   }
 }
