--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hci-ng-grid",
-  "version": "1.0.0-alpha.3",
+  "version": "1.0.0-alpha.4",
   "description": "Comprehensive angular grid component",
   "main": "index.js",
   "repository": "http://ri-source.hci.utah.edu/hcidevs/hci-ng-grid.git",
@@ -16,14 +16,15 @@
     "src/**/!(*spec).+(js|d.ts|js.map)"
   ],
   "devDependencies": {
-    "@angular/common": "^2.2.0",
-    "@angular/compiler": "^2.2.0",
-    "@angular/core": "^2.2.0",
-    "@angular/platform-browser": "^2.2.0",
-    "@angular/platform-browser-dynamic": "^2.2.0",
-    "@angular/forms": "^2.2.0",
-    "@types/core-js": "^0.9.34",
-    "@types/jasmine": "^2.5.38",
+    "@angular/common": "^2.4.4",
+    "@angular/compiler": "^2.4.4",
+    "@angular/core": "^2.4.4",
+    "@angular/platform-browser": "^2.4.4",
+    "@angular/platform-browser-dynamic": "^2.4.4",
+    "@angular/forms": "^2.4.4",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.20",
+    "@types/core-js": "^0.9.35",
+    "@types/jasmine": "^2.5.42",
     "@types/node": "^6.0.48",
     "core-js": "^2.4.1",
     "del": "^2.2.1",
@@ -33,7 +34,7 @@
     "gulp": "^3.9.1",
     "gulp-tsc": "^1.2.5",
     "gulp-tslint": "^6.0.2",
-    "jasmine-core": "^2.4.1",
+    "jasmine-core": "^2.5.2",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
     "karma-coverage": "^0.5.5",
@@ -42,14 +43,14 @@
     "karma-phantomjs-launcher": "^1.0.1",
     "karma-sourcemap-loader": "^0.3.7",
     "minimist": "^1.2.0",
+    "moment": "2.15.1",
     "phantomjs": "^2.1.7",
-    "ng2-bootstrap": "^1.1.16",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.0.1",
+    "rxjs": "^5.0.3",
     "systemjs": "^0.19.27",
     "tslint": "^3.14.0",
-    "typescript": "^2.0.2",
-    "typings": "^1.3.2",
-    "zone.js": "^0.7.2"
+    "typescript": "2.1.6",
+    "typings": "2.1.0",
+    "zone.js": "^0.7.6"
   }
 }
