--- a/demo/package.json
+++ b/demo/package.json
@@ -3,47 +3,63 @@
   "description": "A demo application for hci-ng-grid component development",
   "private": true,
   "scripts": {
-    "postinstall": "cd ../ && gulp push --depCheck",
+    "postinstall": "cd ../ && gulp push",
     "start": "webpack-dev-server --config webpack.config.js --hot --inline --progress --port 3000 --watch-poll --content-base src"
   },
   "dependencies": {
-    "@angular/common": "^2.4.4",
-    "@angular/compiler": "^2.4.4",
-    "@angular/core": "^2.4.4",
-    "@angular/platform-browser": "^2.4.4",
-    "@angular/platform-browser-dynamic": "^2.4.4",
-    "@angular/forms": "^2.4.4",
-    "@angular/router": "^3.4.4",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.20",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/router": "^4.0.0",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.25",
     "bootstrap": "4.0.0-alpha.6",
     "font-awesome": "^4.6.3",
     "moment": "2.15.1"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.35",
-    "@types/jasmine": "^2.5.42",
-    "@types/node": "^6.0.48",
-    "copy-webpack-plugin": "^3.0.1",
+    "@angularclass/hmr": "~1.2.2",
+    "@angularclass/hmr-loader": "~3.0.2",
+    "@types/core-js": "0.9.35",
+    "@types/jasmine": "^2.5.38",
+    "@types/node": "^7.0.0",
+    "angular2-template-loader": "^0.6.2",
+    "awesome-typescript-loader": "3.1.2",
+    "bootstrap-loader": "2.0.0-beta.20",
+    "copy-webpack-plugin": "^4.0.0",
     "core-js": "^2.4.1",
-    "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.22.0",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.0.3",
-    "style-loader": "^0.13.1",
-    "ts-loader": "^0.8.2",
-    "tslint": "^3.14.0",
+    "css-loader": "^0.26.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.0",
+    "font-awesome": "^4.6.3",
+    "fs": "0.0.2",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "node-sass": "4.5.1",
+    "postcss-loader": "1.3.3",
+    "raw-loader": "^0.5.1",
+    "resolve-url-loader": "2.0.2",
+    "sass-loader": "6.0.3",
+    "style-loader": "^0.16.0",
+    "ts-helpers": "^1.1.2",
+    "ts-loader": "^2.0.3",
+    "tsconfig-lint": "^0.11.0",
+    "tslint": "^4.1.1",
     "tslint-loader": "^2.1.5",
-    "typescript": "2.1.6",
+    "typedoc": "^0.5.10",
+    "typescript": "2.1.5",
     "typings": "2.1.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1",
-    "zone.js": "^0.7.6"
+    "url-loader": "^0.5.8",
+    "webpack": "2.3.1",
+    "webpack-dev-server": "2.4.1",
+    "webpack-merge": "^4.1.0",
+    "webpack-stream": "^3.2.0"
   },
   "optionalDependencies": {
-    "hci-ng-grid": "1.0.0-alpha.5"
+    "hci-ng-grid": "1.0.0-alpha.7"
   }
 }
