--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -1,18 +1,29 @@
 {
   "compilerOptions": {
-    "target": "ES5",
-    "module": "commonjs",
+    "target": "es5",
+    "module": "es2015",
+    "lib": [
+      "es2015",
+      "dom"
+    ],
     "moduleResolution": "node",
-    "sourceMap": false,
+    "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "removeComments": false,
     "noImplicitAny": false,
-    "noEmitHelpers": false,
-    "declaration": true,
-    "outDir": "./",
-    "types": ["node", "core-js", "jasmine"]
+    "suppressImplicitAnyIndexErrors": true,
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "types": [
+      "node",
+      "jasmine"]
   },
   "exclude": [
-    "node_modules","**/*.d.ts"
+    "node_modules",
+    "dist",
+    "src/**/*.spec.ts",
+    "src/**/*.e2e.ts"
   ]
 }
