--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "hci-ng-grid",
-  "version": "1.0.0-alpha.5",
+  "version": "1.0.0-alpha.7",
   "description": "Comprehensive angular grid component",
   "main": "index.js",
   "repository": "https://ri-source.hci.utah.edu/hcidevs/hci-ng-grid.git",
   "scripts": {
-    "build": "gulp build",
-    "prepublish": "npm run build"
+    "build": "gulp push",
+    "prepublish": "npm run build",
+    "test": "npm run build"
   },
   "publishConfig": {
     "registry": "https://ri-artifact.hci.utah.edu/artifactory/api/npm/hci-npm-local"
@@ -16,25 +17,25 @@
     "src/**/!(*spec).+(js|d.ts|js.map)"
   ],
   "devDependencies": {
-    "@angular/common": "^2.4.4",
-    "@angular/compiler": "^2.4.4",
-    "@angular/core": "^2.4.4",
-    "@angular/platform-browser": "^2.4.4",
-    "@angular/platform-browser-dynamic": "^2.4.4",
-    "@angular/forms": "^2.4.4",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.20",
-    "@types/core-js": "0.9.35",
-    "@types/jasmine": "^2.5.42",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.25",
+    "@types/jasmine": "^2.5.38",
     "@types/node": "^6.0.48",
     "core-js": "^2.4.1",
     "del": "^2.2.1",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
+    "es6-shim": "0.35.3",
+    "es6-promise": "4.1.0",
     "fs": "^0.0.2",
     "gulp": "^3.9.1",
     "gulp-tsc": "^1.2.5",
-    "gulp-tslint": "^6.0.2",
-    "jasmine-core": "^2.5.2",
+    "gulp-tslint": "7.0.1",
+    "jasmine-core": "^2.4.1",
+    "moment": "2.15.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
     "karma-coverage": "^0.5.5",
@@ -43,14 +44,12 @@
     "karma-phantomjs-launcher": "^1.0.1",
     "karma-sourcemap-loader": "^0.3.7",
     "minimist": "^1.2.0",
-    "moment": "2.15.1",
-    "phantomjs": "^2.1.7",
+    "phantomjs-prebuilt": "^2.1.12",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.0.3",
+    "rxjs": "5.0.1",
     "systemjs": "^0.19.27",
-    "tslint": "^3.14.0",
-    "typescript": "2.1.6",
-    "typings": "2.1.0",
-    "zone.js": "^0.8.5"
+    "tslint": "^4.5.1",
+    "typescript": "2.1.5",
+    "zone.js": "^0.8.4"
   }
 }
