--- a/demo/package.json
+++ b/demo/package.json
@@ -3,46 +3,67 @@
   "description": "A demo application for hci-ng-grid component development",
   "private": true,
   "scripts": {
-    "postinstall": "cd ../ && gulp push",
-    "start": "webpack-dev-server --config webpack.config.js --hot --inline --progress --port 3000 --watch-poll --content-base src"
+    "build": "npm run clean && npm run ngc && npm run webpack -p --env.production --progress",
+    "clean": "npm run rimraf src/**/*.js* src/**/*.ngstyle.ts src/**/*.ngfactory.ts src/**/*.ngsummary.json src/**/*.metadata.json src/**/*.d.ts build dist",
+    "ngc": "ngc",
+    "postinstall": "cd .. && npm run build && npm run push && cd demo",
+    "rimraf": "rimraf",
+    "serve": "node server.js",
+    "start": "npm run clean && npm run ngc && webpack-dev-server",
+    "start-prod": "npm run build && npm run serve",
+    "webpack": "webpack"
+  },
+  "optionalDependencies": {
+    "hci-ng-grid": "1.0.0-alpha.9"
   },
   "dependencies": {
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
     "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/forms": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.25",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.30",
     "bootstrap": "4.0.0-alpha.6",
     "font-awesome": "^4.6.3",
-    "moment": "2.15.1"
+    "moment": "2.15.1",
+    "reflect-metadata": "^0.1.10",
+    "rxjs": "^5.0.1",
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angularclass/hmr": "~1.2.2",
-    "@angularclass/hmr-loader": "~3.0.2",
-    "@types/core-js": "0.9.35",
+    "@types/core-js": "^0.9.42",
+    "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.5.38",
     "@types/node": "^7.0.0",
+    "@types/selenium-webdriver": "~2.53.39",
+    "@types/source-map": "^0.5.0",
+    "@types/webpack": "^3.0.4",
+    "angular-router-loader": "^0.6.0",
     "angular2-template-loader": "^0.6.2",
+    "autoprefixer": "^7.1.2",
     "awesome-typescript-loader": "3.1.2",
     "bootstrap-loader": "2.0.0-beta.20",
     "copy-webpack-plugin": "^4.0.0",
     "core-js": "^2.4.1",
     "css-loader": "^0.26.0",
+    "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.0",
-    "font-awesome": "^4.6.3",
-    "fs": "0.0.2",
+    "fs": "^0.0.2",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "minimist": "^1.2.0",
     "node-sass": "4.5.1",
     "postcss-loader": "1.3.3",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "2.0.2",
+    "rimraf": "^2.6.1",
     "sass-loader": "6.0.3",
     "style-loader": "^0.16.0",
     "ts-helpers": "^1.1.2",
@@ -50,16 +71,13 @@
     "tsconfig-lint": "^0.11.0",
     "tslint": "^4.1.1",
     "tslint-loader": "^2.1.5",
-    "typedoc": "^0.5.10",
-    "typescript": "2.1.5",
-    "typings": "2.1.0",
+    "typescript": "2.3.0",
+    "uglify-es": "^3.0.25",
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.2",
     "url-loader": "^0.5.8",
-    "webpack": "2.3.1",
+    "webpack": "^3.3.0",
     "webpack-dev-server": "2.4.1",
     "webpack-merge": "^4.1.0",
     "webpack-stream": "^3.2.0"
-  },
-  "optionalDependencies": {
-    "hci-ng-grid": "1.0.0-alpha.8"
   }
 }
