--- a/package.json
+++ b/package.json
@@ -1,55 +1,80 @@
 {
   "name": "hci-ng-grid",
-  "version": "1.0.0-alpha.8",
+  "version": "1.0.0-alpha.9",
   "description": "Comprehensive angular grid component",
-  "main": "index.js",
   "repository": "https://ri-source.hci.utah.edu/hcidevs/hci-ng-grid.git",
   "scripts": {
-    "build": "gulp push",
-    "prepublish": "npm run build",
-    "test": "npm run build"
+    "build": "npm run clean && npm run ngc && npm run doc && npm run karma start",
+    "clean": "npm run rimraf index.js index.d.ts index.metadata.json index.ngsummary.json index.js.map src/**/*.js src/**/*.d.ts src/**/*.js.map src/**/*.metadata.json src/**/*.ngsummary.json code-coverage",
+    "compodoc": "compodoc",
+    "copyfiles": "copyfiles",
+    "doc": "npm run compodoc -- src -p tsconfig.json -d docs -n '@hci/dashboard'",
+    "karma": "karma",
+    "ngc": "ngc",
+    "push": "npm run copyfiles -- \"index.+(js|d.ts|js.map|metadata.json)\" demo/node_modules/hci-ng-grid && npm run copyfiles -- -e \"*.+(ngfactory|ngsummary).*\" \"src/**/*.+(js|d.ts|js.map|metadata.json)\" demo/node_modules/hci-ng-grid",
+    "rimraf": "rimraf"
   },
+  "main": "index.js",
+  "module": "index.js",
+  "typings": "index.d.ts",
   "publishConfig": {
     "registry": "https://ri-artifact.hci.utah.edu/artifactory/api/npm/hci-npm-local"
   },
   "files": [
-    "index.+(js|d.ts|js.map)",
-    "src/**/!(*spec).+(js|d.ts|js.map)"
+    "index.+(js|d.ts|js.map|metadata.json)",
+    "src/**/!(*spec).+(js|d.ts|js.map|metadata.json)"
   ],
+  "dependencies": {
+    "moment": "^2.18.1"
+  },
+  "peerDependencies": {
+    "@angular/common": "^4.0.0",
+    "@angular/core": "^4.0.0"
+  },
   "devDependencies": {
+    "@angular/animations": "^4.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
     "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.25",
+    "@angular/router": "^4.0.0",
+    "@compodoc/compodoc": "^1.0.0-beta.13",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.30",
     "@types/jasmine": "^2.5.38",
     "@types/node": "^6.0.48",
+    "angular-2-local-storage": "1.0.1",
+    "angular-cli": "^1.0.0-beta.28.3",
+    "babel": "^6.23.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015":"^6.24.1",
+    "copyfiles": "^1.2.0",
     "core-js": "^2.4.1",
     "del": "^2.2.1",
-    "es6-shim": "0.35.3",
-    "es6-promise": "4.1.0",
+    "es6-shim": "^0.35.3",
+    "es6-promise": "^4.1.0",
     "fs": "^0.0.2",
-    "gulp": "^3.9.1",
-    "gulp-tsc": "^1.2.5",
-    "gulp-tslint": "7.0.1",
-    "jasmine-core": "^2.4.1",
-    "moment": "2.15.1",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-coverage": "^0.5.5",
-    "karma-jasmine": "^0.3.8",
-    "karma-mocha-reporter": "^2.1.0",
-    "karma-phantomjs-launcher": "^1.0.1",
+    "immutable": "^3.8.1",
+    "inline-source-map": "^0.6.2",
+    "jasmine-core": "^2.6.2",
+    "karma": "^1.7.0",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha-reporter": "^2.2.3",
     "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack":"^2.0.3",
     "minimist": "^1.2.0",
-    "phantomjs-prebuilt": "^2.1.12",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.1",
-    "systemjs": "^0.19.27",
+    "rimraf": "^2.6.1",
+    "rxjs": "^5.0.1",
     "tslint": "^4.5.1",
-    "typescript": "2.1.5",
-    "zone.js": "^0.8.4"
+    "typescript": "2.3.0",
+    "webpack": "^3.3.0",
+    "zone.js": "^0.8.5"
   }
 }
