--- a/demo/package.json
+++ b/demo/package.json
@@ -3,18 +3,20 @@
   "description": "A demo application for hci-ng-grid component development",
   "private": true,
   "scripts": {
-    "build": "npm run clean && npm run ngc && npm run webpack -p --env.production --progress",
-    "clean": "npm run rimraf src/**/*.js* src/**/*.ngstyle.ts src/**/*.ngfactory.ts src/**/*.ngsummary.json src/**/*.metadata.json src/**/*.d.ts build dist",
+    "build": "npm run build:server",
+    "build:live": "npm run clean && npm run ngc && npm run webpack -- --config webpack/webpack.live.js",
+    "build:server": "npm run clean && npm run ngc && npm run webpack -- --config webpack/webpack.server.js",
+    "clean": "npm run rimraf src/**/*.js src/**/*.js.map src/**/*.ngstyle.ts src/**/*.ngsummary.json src/**/*.metadata.json src/**/*.d.ts build dist",
     "ngc": "ngc",
     "postinstall": "cd .. && npm run build && npm run push && cd demo",
     "rimraf": "rimraf",
     "serve": "node server.js",
-    "start": "npm run clean && npm run ngc && webpack-dev-server",
-    "start-prod": "npm run build && npm run serve",
+    "start": "npm run clean && npm run ngc && webpack-dev-server --config webpack.config.js",
+    "start-prod": "npm run build:live && npm run serve",
     "webpack": "webpack"
   },
   "optionalDependencies": {
-    "hci-ng-grid": "1.0.0-alpha.9"
+    "hci-ng-grid": "1.0.0-alpha.10"
   },
   "dependencies": {
     "@angular/common": "^4.0.0",
@@ -26,12 +28,13 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.30",
-    "bootstrap": "4.0.0-alpha.6",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.2",
+    "angular-2-local-storage": "1.0.1",
+    "bootstrap": "4.0.0-beta",
     "font-awesome": "^4.6.3",
     "moment": "2.15.1",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.0.1",
+    "rxjs": "^5.4.3",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
@@ -46,14 +49,15 @@
     "angular2-template-loader": "^0.6.2",
     "autoprefixer": "^7.1.2",
     "awesome-typescript-loader": "3.1.2",
-    "bootstrap-loader": "2.0.0-beta.20",
-    "copy-webpack-plugin": "^4.0.0",
+    "base-href-webpack-plugin": "^1.0.2",
+    "copy-webpack-plugin": "^4.0.1",
     "core-js": "^2.4.1",
     "css-loader": "^0.26.0",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.0",
     "fs": "^0.0.2",
+    "gulp": "^3.9.1",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "less": "^2.7.1",
@@ -71,7 +75,7 @@
     "tsconfig-lint": "^0.11.0",
     "tslint": "^4.1.1",
     "tslint-loader": "^2.1.5",
-    "typescript": "2.3.0",
+    "typescript": "^2.5.1",
     "uglify-es": "^3.0.25",
     "uglifyjs-webpack-plugin": "^1.0.0-beta.2",
     "url-loader": "^0.5.8",
