--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "hci-ng-grid",
-  "version": "1.0.0-alpha.9",
+  "version": "1.0.0-alpha.10",
   "description": "Comprehensive angular grid component",
   "repository": "https://ri-source.hci.utah.edu/hcidevs/hci-ng-grid.git",
   "scripts": {
     "build": "npm run clean && npm run ngc && npm run doc && npm run karma start",
-    "clean": "npm run rimraf index.js index.d.ts index.metadata.json index.ngsummary.json index.js.map src/**/*.js src/**/*.d.ts src/**/*.js.map src/**/*.metadata.json src/**/*.ngsummary.json code-coverage",
+    "clean": "npm run rimraf index.js index.d.ts index.ngsummary.json index.metadata.json index.js.map src/**/*.js src/**/*.ngfactory.ts src/**/*.d.ts src/**/*.js.map src/**/*.ngsummary.json src/**/*.metadata.json code-coverage",
     "compodoc": "compodoc",
     "copyfiles": "copyfiles",
-    "doc": "npm run compodoc -- src -p tsconfig.json -d docs -n '@hci/dashboard'",
+    "doc": "npm run compodoc -- src -p tsconfig.json -d docs -n 'hci-ng-grid'",
     "karma": "karma",
     "ngc": "ngc",
+    "prepublish": "npm run build",
     "push": "npm run copyfiles -- \"index.+(js|d.ts|js.map|metadata.json)\" demo/node_modules/hci-ng-grid && npm run copyfiles -- -e \"*.+(ngfactory|ngsummary).*\" \"src/**/*.+(js|d.ts|js.map|metadata.json)\" demo/node_modules/hci-ng-grid",
     "rimraf": "rimraf"
   },
@@ -29,10 +30,10 @@
   },
   "peerDependencies": {
     "@angular/common": "^4.0.0",
-    "@angular/core": "^4.0.0"
+    "@angular/core": "^4.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.2"
   },
   "devDependencies": {
-    "@angular/animations": "^4.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/compiler-cli": "^4.0.0",
@@ -42,39 +43,43 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@compodoc/compodoc": "^1.0.0-beta.13",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.30",
-    "@types/jasmine": "^2.5.38",
+    "@compodoc/compodoc": "^1.0.0-beta.14",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.2",
+    "@types/jasmine": "^2.5.53",
     "@types/node": "^6.0.48",
+    "@types/source-map": "^0.5.0",
+    "@types/webpack": "^3.0.9",
     "angular-2-local-storage": "1.0.1",
-    "angular-cli": "^1.0.0-beta.28.3",
-    "babel": "^6.23.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015":"^6.24.1",
+    "awesome-typescript-loader": "^3.2.3",
+    "angular2-template-loader": "^0.6.2",
     "copyfiles": "^1.2.0",
     "core-js": "^2.4.1",
     "del": "^2.2.1",
-    "es6-shim": "^0.35.3",
-    "es6-promise": "^4.1.0",
     "fs": "^0.0.2",
     "immutable": "^3.8.1",
     "inline-source-map": "^0.6.2",
+    "istanbul-instrumenter-loader": "2.0.0",
     "jasmine-core": "^2.6.2",
     "karma": "^1.7.0",
-    "karma-babel-preprocessor": "^6.0.1",
     "karma-chrome-launcher": "^2.1.1",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
     "karma-mocha-reporter": "^2.2.3",
+    "karma-remap-coverage": "^0.1.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack":"^2.0.3",
+    "karma-webpack": "^2.0.3",
     "minimist": "^1.2.0",
     "reflect-metadata": "^0.1.3",
     "rimraf": "^2.6.1",
-    "rxjs": "^5.0.1",
+    "rxjs": "^5.4.3",
+    "source-map-loader": "^0.2.1",
     "tslint": "^4.5.1",
-    "typescript": "2.3.0",
+    "typescript": "^2.5.1",
     "webpack": "^3.3.0",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-server": "^2.7.1",
+    "webpack-dll-bundles-plugin": "^1.0.0-beta.5",
+    "webpack-merge": "^4.1.0",
     "zone.js": "^0.8.5"
   }
 }
