--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "peerDependencies": {
     "@angular/common": "^4.0.0",
     "@angular/core": "^4.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.2"
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5"
   },
   "devDependencies": {
     "@angular/common": "^4.0.0",
@@ -44,7 +44,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@compodoc/compodoc": "^1.0.0-beta.14",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.2",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
     "@types/jasmine": "^2.5.53",
     "@types/node": "^6.0.48",
     "@types/source-map": "^0.5.0",
