--- a/demo/package.json
+++ b/demo/package.json
@@ -28,7 +28,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.2",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
     "angular-2-local-storage": "1.0.1",
     "bootstrap": "4.0.0-beta",
     "font-awesome": "^4.6.3",
