--- a/demo/package.json
+++ b/demo/package.json
@@ -6,7 +6,7 @@
     "build": "npm run build:server",
     "build:live": "npm run clean && npm run ngc && npm run webpack -- --config webpack/webpack.live.js",
     "build:server": "npm run clean && npm run ngc && npm run webpack -- --config webpack/webpack.server.js",
-    "clean": "npm run rimraf src/**/*.js src/**/*.js.map src/**/*.ngstyle.ts src/**/*.ngsummary.json src/**/*.metadata.json src/**/*.d.ts build dist",
+    "clean": "npm run rimraf src/**/*.js src/**/*.js.map src/**/*.ngstyle.ts src/**/*.ngfactory.ts src/**/*.ngsummary.json src/**/*.metadata.json src/**/*.d.ts build dist",
     "ngc": "ngc",
     "postinstall": "cd .. && npm run build && npm run push && cd demo",
     "rimraf": "rimraf",
@@ -30,7 +30,7 @@
     "@angular/router": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
     "angular-2-local-storage": "1.0.1",
-    "bootstrap": "4.0.0-beta.2",
+    "bootstrap": "^4.0.0",
     "font-awesome": "^4.6.3",
     "moment": "2.15.1",
     "reflect-metadata": "^0.1.10",
@@ -77,7 +77,7 @@
     "tslint-loader": "^2.1.5",
     "typescript": "^2.5.1",
     "uglify-es": "^3.0.25",
-    "uglifyjs-webpack-plugin": "^1.0.0-beta.2",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "url-loader": "^0.5.8",
     "webpack": "^3.3.0",
     "webpack-dev-server": "2.4.1",
