--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "Comprehensive angular grid component",
   "repository": "https://ri-source.hci.utah.edu/hcidevs/hci-ng-grid.git",
   "scripts": {
-    "build": "npm run clean && npm run ngc && npm run doc && npm run karma start",
-    "clean": "npm run rimraf index.js index.d.ts index.ngsummary.json index.metadata.json index.js.map src/**/*.js src/**/*.ngfactory.ts src/**/*.d.ts src/**/*.js.map src/**/*.ngsummary.json src/**/*.metadata.json code-coverage",
+    "build": "npm run clean && npm run ngc && npm run doc && npm run karma start && npm run copyfiles package.json dist/",
+    "clean": "npm run rimraf index.js index.d.ts index.ngsummary.json index.metadata.json index.js.map src/**/*.js src/**/*.ngfactory.ts src/**/*.d.ts src/**/*.js.map src/**/*.ngsummary.json src/**/*.metadata.json code-coverage dist",
     "compodoc": "compodoc",
     "copyfiles": "copyfiles",
     "doc": "npm run compodoc -- src -p tsconfig.json -d docs -n 'hci-ng-grid'",
     "karma": "karma",
     "ngc": "ngc",
-    "npmPub": "npm run build && npm run copyfiles -- package.json build/ && cd build && npm publish",
-    "push": "cd build && npm run copyfiles -- \"index.+(js|d.ts|js.map|metadata.json)\" ../demo/node_modules/hci-ng-grid && npm run copyfiles -- -e \"*.+(ngfactory|ngsummary).*\" \"src/**/*.+(js|d.ts|js.map|metadata.json)\" ../demo/node_modules/hci-ng-grid && cd ..",
+    "npmPub": "npm run build && npm run copyfiles -- package.json dist/ && cd dist && npm publish",
+    "push": "cd dist && npm run copyfiles -- \"index.+(js|d.ts|js.map|metadata.json)\" ../demo/node_modules/hci-ng-grid && npm run copyfiles -- -e \"*.+(ngfactory|ngsummary).*\" \"src/**/*.+(js|d.ts|js.map|metadata.json)\" ../demo/node_modules/hci-ng-grid && cd ..",
     "rimraf": "rimraf"
   },
   "main": "index.js",
