Update keywords, dep versions, grid min height

--- a/demo/package.json
+++ b/demo/package.json
@@ -19,20 +19,20 @@
     "hci-ng-grid": "2.0.x"
   },
   "dependencies": {
-    "@angular/common": "5.2.x",
-    "@angular/compiler": "5.2.x",
-    "@angular/compiler-cli": "5.2.x",
-    "@angular/core": "5.2.x",
-    "@angular/forms": "5.2.x",
-    "@angular/platform-browser": "5.2.x",
-    "@angular/router": "5.2.x",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/compiler-cli": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/forms": "^5.2.0",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/router": "^5.2.0",
     "@fortawesome/fontawesome": "^1.1.2",
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@ng-bootstrap/ng-bootstrap": "1.1.x",
-    "bootstrap": "4.1.x",
-    "moment": "2.15.1",
-    "moment-random": "^1.0.3",
+    "bootstrap": "^4.1.0",
+    "moment": "^2.15.0",
+    "moment-random": "1.0.x",
     "prismjs": "1.15.x",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.5.5",
