--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "hci-ng-grid",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Comprehensive angular grid component",
+  "keywords": [
+    "angular",
+    "grid",
+    "list"
+  ],
   "license": "MIT",
   "repository": "git+https://github.com/HuntsmanCancerInstitute-RISR/hci-ng-grid.git",
   "homepage": "https://huntsmancancerinstitute-risr.github.io",
@@ -28,18 +33,18 @@
   ],
   "dependencies": {
     "@ng-bootstrap/ng-bootstrap": "1.1.x",
-    "moment": "2.18.x"
+    "moment": "^2.15.0"
   },
   "devDependencies": {
-    "@angular/animations": "5.2.x",
-    "@angular/common": "5.2.x",
-    "@angular/compiler": "5.2.x",
-    "@angular/compiler-cli": "5.2.x",
-    "@angular/core": "5.2.x",
-    "@angular/forms": "5.2.x",
-    "@angular/platform-browser": "5.2.x",
-    "@angular/platform-browser-dynamic": "5.2.x",
-    "@angular/router": "5.2.x",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "@compodoc/compodoc": "1.0.x",
     "@types/jasmine": "^2.5.53",
     "@types/node": "^8.0.0",
