--- a/package.json
+++ b/package.json
@@ -14,18 +14,24 @@
   "repository": "git+https://github.com/HuntsmanCancerInstitute-RISR/hci-ng-grid.git",
   "homepage": "https://huntsmancancerinstitute-risr.github.io/hci-ng-grid-demo",
   "scripts": {
-    "build": "npm run clean && npm run ngc && npm run doc && npm run karma start && npm run copyfiles package.json dist/ && npm run copyfiles -- src/grid/themes/*.css dist/",
+    "build": "npm run clean && npm run ngc && npm run doc && npm run karma start && npm run copyfiles package.json dist/ && npm run copyfiles -- src/grid/themes/*.css dist/ && npm run push",
+    "build-demo": "gulp build-demo",
     "clean": "npm run rimraf index.js index.d.ts index.ngsummary.json index.metadata.json index.js.map src/**/*.js src/**/*.ngfactory.ts src/**/*.d.ts src/**/*.js.map src/**/*.ngsummary.json src/**/*.metadata.json code-coverage dist",
     "compodoc": "compodoc",
     "copyfiles": "copyfiles",
     "copyToDist": "npm run copyfiles -- LICENSE package.json README.md dist/",
     "doc": "npm run compodoc -- src -p ./tsconfig.json -d docs -n 'hci-ng-grid'",
+    "gulp": "gulp",
+    "install-demo": "gulp install-demo",
     "karma": "karma",
     "ngc": "ngc",
     "npmPack": "npm run build && npm run copyToDist && cd dist && npm pack",
     "npmPublish": "npm run build && npm run copyToDist && cd dist && npm publish --access public",
+    "postinstall": "npm run build",
     "push": "cd dist && npm run copyfiles -- \"index.+(js|d.ts|js.map|metadata.json)\" ../demo/node_modules/hci-ng-grid && npm run copyfiles -- -e \"*.+(ngfactory|ngsummary).*\" \"src/**/*.+(js|d.ts|js.map|metadata.json|css)\" ../demo/node_modules/hci-ng-grid && cd ..",
-    "rimraf": "rimraf"
+    "rimraf": "rimraf",
+    "run-demo": "gulp run-demo",
+    "run-demo-prod": "gulp run-demo-prod"
   },
   "main": "index.js",
   "module": "index.js",
@@ -65,6 +71,17 @@
     "event-stream": "3.3.4",
     "extend": ">=3.0.2",
     "fs": "^0.0.2",
+    "gulp": "4.0.x",
+    "gulp-clean": "0.4.x",
+    "gulp-debug": "4.0.x",
+    "gulp-exec": "3.0.x",
+    "gulp-exit": "0.0.x",
+    "gulp-install": "1.1.x",
+    "gulp-json-editor": "2.4.x",
+    "gulp-json-modify": "1.0.x",
+    "gulp-load-plugins": "1.5.x",
+    "gulp-rename": "1.4.x",
+    "gulp-sequence": "1.0.x",
     "immutable": "^3.8.1",
     "inline-source-map": "^0.6.2",
     "istanbul-instrumenter-loader": "2.0.0",
@@ -80,6 +97,7 @@
     "lodash": ">=4.17.11",
     "macaddress": ">=0.2.9",
     "minimist": "^1.2.0",
+    "node-color-log": "2.1.x",
     "reflect-metadata": "^0.1.3",
     "rimraf": "^2.6.1",
     "rxjs": "5.5.x",
